добавил авторизацию через апи

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
+APP_NAME=ItRestService
 APP_ENV=local
 APP_KEY=base64:50+P3/bTnQu4pCiPlEHwvmYH63H29tshbb71M9STqvI=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://it-rest-service.ru
 
 LOG_CHANNEL=stack
 
@@ -24,11 +24,13 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_HOST=smtp.beget.com
+MAIL_PORT=465
+MAIL_USERNAME=business@it-rest-service.ru
+MAIL_PASSWORD=82q0Z4Z&
+MAIL_ENCRYPTION=ssl
+MAIL_FROM_ADDRESS=business@it-rest-service.ru
+MAIL_FROM_NAME=ItRestService
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
