добавил историю заказов

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,8 @@
     "require": {
         "php": "^7.2",
         "fideloper/proxy": "^4.0",
+        "grkamil/laravel-telegram-logging": "^1.2",
+        "laravel-notification-channels/telegram": "^0.2.0",
         "laravel/framework": "^6.2",
         "laravel/passport": "^8.4",
         "laravel/tinker": "^2.0",
