--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ APP_KEY=base64:50+P3/bTnQu4pCiPlEHwvmYH63H29tshbb71M9STqvI=
 APP_DEBUG=true
 APP_URL=https://it-rest-service.ru
 
-LOG_CHANNEL=stack
+LOG_CHANNEL=telegram
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
@@ -44,3 +44,6 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+TELEGRAM_LOGGER_BOT_TOKEN=917429752:AAFK2nmeqcpbVqNxQLl7VgJDYVhAWTBXnz0
+TELEGRAM_LOGGER_CHAT_ID=-1001401139179
