--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ APP_DEBUG=true
 APP_URL=https://it-rest-service.ru
 
 LOG_CHANNEL=telegram
+TELEGRAM_BOT_TOKEN=1202860247:AAGQmSrljafzEY0BsqyncUCSjGdP6CNbLbk
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
