--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue": "^2.6.11",
         "vue-stepper": "^1.4.2",
         "vue-the-mask": "^0.11.1",
-        "vuelidate": "^0.7.5"
+        "vuelidate": "^0.7.5",
+        "vuex": "^3.4.0"
     }
 }
