--- a/.env
+++ b/.env
@@ -7,6 +7,8 @@ APP_URL=https://it-rest-service.ru
 LOG_CHANNEL=telegram
 TELEGRAM_BOT_TOKEN=1202860247:AAGQmSrljafzEY0BsqyncUCSjGdP6CNbLbk
 
+MY_BOT_NAME=it_rs_bot
+
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
