--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ APP_KEY=base64:50+P3/bTnQu4pCiPlEHwvmYH63H29tshbb71M9STqvI=
 APP_DEBUG=true
 APP_URL=https://it-rest-service.ru
 
-LOG_CHANNEL=telegram
+LOG_CHANNEL=stack
 TELEGRAM_BOT_TOKEN=1202860247:AAGQmSrljafzEY0BsqyncUCSjGdP6CNbLbk
 
 MY_BOT_NAME=it_rs_bot
