--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ APP_URL=https://it-rest-service.ru
 LOG_CHANNEL=telegram
 TELEGRAM_BOT_TOKEN=1202860247:AAGQmSrljafzEY0BsqyncUCSjGdP6CNbLbk
 
-MY_BOT_NAME=it_rs_bot
+MY_BOT_NAME=it_rest_service_bot
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
